remove material icon

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-@import '~material-design-icons/iconfont/material-icons.css';
+/* @import '~material-design-icons/iconfont/material-icons.css'; */
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
